[build-system]
# Copied that from https://github.com/Kronuz/esprima-python/blob/master/pyproject.toml
requires = ["setuptools>=80.9.0", "wheel>=0.45.1"]#, "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"
#[tool.setuptools_scm]

[project]
name = "KUtil-jakubaugustyn"
version = "0.1.1" # 17. 9. 2025
authors = [
    { name = "Jakub Augustýn", email = "kubik.augustyn@post.cz" },
    { name = "Radek Augustýn", email = "raugustyn@post.cz" },
]
description = "Kuba's Python Utilities"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
#license = "MIT"
#license = { file = "LICENSE" }
license-files = ["LICENSE"]
# https://stackoverflow.com/a/73600610
dynamic = ["dependencies"]
#[tool.setuptools]
#license-files = []
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["kutil"]

[project.urls]
Homepage = "https://github.com/kubikaugustyn/KUtil"
Issues = "https://github.com/kubikaugustyn/KUtil/issues"
